--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -88,7 +88,7 @@ header h1 {
 form {
   max-width: 400px;
   margin: 0 auto;
-  display: grid;
+  display: flex;
   grid-template-columns: 3fr 1fr;
   gap: 10px;
 }
